--- a/styles.css
+++ b/styles.css
@@ -183,6 +183,15 @@ dialog {
     padding: 20px;
     border-radius: 10px;
     text-align: center;
+
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 80%;
+    max-width: 500px;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+    background-color: #fff;
 }
 
 dialog button {
